--- a/cadastro.html
+++ b/cadastro.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h1>CADASTRO</h1>
     <header id="headerContainer">
         <nav class="navbar navbar-light bg-light" class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -32,8 +33,8 @@
     </header>
     <section id="for">
         <form class="form-floating">
-            <input type="email" class="form-control is-invalid" id="floatingInputInvalid" placeholder="name@example.com" required>
-            <label for="floatingInputInvalid">Email Invalido</label>
+            <input type="email" placeholder="name@example.com" required>
+            <label class="texto">Email </label>
         </form>
     </section>
 
