--- a/cadastro.html
+++ b/cadastro.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <h1>CADASTRO</h1>
     <header id="headerContainer">
+
         <nav class="navbar navbar-light bg-light" class="navbar navbar-expand-lg navbar-light bg-light">
+            <h1>CADASTRO</h1>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -31,13 +32,28 @@
             </div>
         </nav>
     </header>
-    <section id="for">
-        <form class="form-floating">
-            <input type="email" placeholder="name@example.com" required>
-            <label class="texto">Email </label>
-        </form>
-    </section>
-
+    <form action="" >
+        <fieldset id="">
+            <div>
+                <label>Nome</label>
+                <input type="text" name="nome" id="nome">
+                <label>Sobrenome</label>
+                <input type="text" name="sobrenome" id="sobrenome">
+                <label>Data de Nascimento</label>
+                <input type="date" name="nasciment" id="dataNascimento">
+            </div>
+            <div>
+                <label>Email</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <div>
+                <label for="">Senha</label>
+                <input type="password" name="senha" id="senha">
+                <label>Confirmar Senha</label>
+                <input type="password" name="confirSenha" id="confirSenha">
+            </div>
+        </fieldset>
+    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
