--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="cadastro.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <a class="nav-link" href="#">Login</a>
                         <a class="nav-link" href="#">Informações</a>
                     </div>
