vaidade da data completa

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <fieldset id="field">
             <div>
                 <label id="labelNome">Nome</label>
-                <input type="text" name="nome" id="nome" class="" required>
+                <input type="text" name="nome" id="nome" class="" maxlength="15" required>
                 <label id="labelSobreNome">Sobrenome</label>
-                <input type="text" name="sobrenome" id="sobreNome" maxlength="10" required>
+                <input type="text" name="sobrenome" id="sobreNome" maxlength="15" required>
             </div><br>
             <div>
                 <label id="labelDataNasc">Data de Nascimento</label>
