--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div><br>
             <div>
                 <label id="labelDataNasc">Data de Nascimento</label>
-                <input type="date" name="nasciment" id="dataNascimento" required>
+                <input type="date" name="nasciment" id="dataNascimento" data-tipo="dataNascimento" required>
             </div><br>
             <div>
                 <label id="labelEmail">Email</label>
@@ -54,17 +54,19 @@
             </div><br>
             <div>
                 <label for="" id="labelSenha">Senha</label>
-                <input type="password" name="senha" id="senha" pattern="^(?=.*\d).{8,12}$" title="Expressão de senha. A senha deve ter entre 8 e 12 dígitos e incluir pelo menos um dígito numérico." required>
+                <input type="password" name="senha" id="senha" pattern="^(?=.*\d).{8,12}$"
+                    title="Expressão de senha. A senha deve ter entre 8 e 12 dígitos e incluir pelo menos um dígito numérico."
+                    required>
                 <label id="labelConfirmarSenha">Confirmar Senha</label>
                 <input type="password" name="confirSenha" id="confirmarSenha" pattern="^(?=.*\d).{8,12}$" required>
             </div>
             <div class="btn-confi">
-                <button id="confirmar" class="btn btn-primary" class="col-2" >Confirmar</button>
+                <button id="confirmar" class="btn btn-primary" class="col-2">Confirmar</button>
             </div>
         </fieldset>
     </form>
-    <script src="cadastroDados.js"></script>
-    <script src="validaData.js"></script>
+    <script src="./js/cadastroDados.js"></script>
+    <script src="./js/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
