--- a/index.html
+++ b/index.html
@@ -41,16 +41,20 @@
             <div>
                 <label id="labelNome">Nome</label>
                 <input type="text" name="nome" id="nome" class="" maxlength="15" required>
+                <span class="span-mensagem-erro">Este campo está invalido</span>
                 <label id="labelSobreNome">Sobrenome</label>
                 <input type="text" name="sobrenome" id="sobreNome" maxlength="15" required>
+                <span class="span-mensagem-erro">Este campo está invalido</span>
             </div><br>
             <div>
                 <label id="labelDataNasc">Data de Nascimento</label>
                 <input type="date" name="nasciment" id="dataNascimento" data-tipo="dataNascimento" required>
+                <span class="span-mensagem-erro">Este campo está invalido</span>
             </div><br>
             <div>
                 <label id="labelEmail">Email</label>
                 <input type="email" name="email" id="email" class="col-8" required>
+                <span class="span-mensagem-erro">Este campo está invalido</span>
             </div><br>
             <div>
                 <label for="" id="labelSenha">Senha</label>
@@ -65,7 +69,6 @@
             </div>
         </fieldset>
     </form>
-    <script src="./js/cadastroDados.js"></script>
     <script src="./js/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
